--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,54 @@
 <resources>
     <string name="app_name">Android-SDK</string>
+    <string name="youtube_html"><![CDATA[
+<!DOCTYPE html>
+<html>
+  <body style=\"margin: 0; background-color: black;\">
+    <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+    <div id=\"player\"></div>
+
+    <script>
+      var tag = document.createElement(\"script\");
+
+      tag.src = \"https://www.youtube.com/iframe_api\";
+      var firstScriptTag = document.getElementsByTagName(\"script\")[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player(\"player\", {
+          height: \"auto\",
+          width: \"100%\",
+          videoId: \"YOUTUBE_ID\",
+          events: {
+            \"onReady\": onPlayerReady,
+            \"onStateChange\": onPlayerStateChange,
+            \"onError\": onError,
+          }
+        });
+      };
+
+      function onPlayerReady(event) {
+          event.target.playVideo();
+      };
+      function onPlayerStateChange(event) {
+        console.log(\"STATE\t\" + event.data);
+      };
+      function onError(event) {
+        console.log(\"ERROR\t\" + event.data);
+      };
+      window.addEventListener(\"resize\", function(event) {
+        var width = window.innerWidth, height = window.innerHeight;
+        if (width < height * 16/9) {
+          height = Math.round(width * 9/16);
+        } else {
+          width = Math.round(height * 16/9);
+        }
+        console.log(\"resize window=\" + window.innerWidth + \"x\" + window.innerHeight + \" => \" + width + \"x\" + height);
+        player && player.setSize && player.setSize(width, height);
+      });
+    </script>
+  </body>
+</html>
+    ]]></string>
 </resources>
